--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-  - name: "us-central1-docker.pkg.dev/cloud-build-pipeline-396819/cloud-build-helper-docker/cloud-build-helper-docker:0.1"
+  - name: "us-central1-docker.pkg.dev/cloud-build-pipeline-396819/cloud-build-helper-docker/cloud-build-helper-docker:latest"
     id: "Clone repo"
     entrypoint: "bash"
     args:
@@ -11,7 +11,7 @@ steps:
         source git-clone-and-checkout.sh
         cloneAndCheckoutBranch "$_GIT_CLONE_URL" "$_GIT_REPOSITORY_NAME" "$_GIT_REF" "$_GIT_HEAD_SHA"
 
-  - name: "us-central1-docker.pkg.dev/cloud-build-pipeline-396819/cloud-build-helper-docker/cloud-build-helper-docker:0.1"
+  - name: "us-central1-docker.pkg.dev/cloud-build-pipeline-396819/cloud-build-helper-docker/cloud-build-helper-docker:latest"
     id: "Run tests"
     entrypoint: "bash"
     dir: "${_GIT_REPOSITORY_NAME}"
@@ -24,7 +24,7 @@ steps:
         source run-dockerfile-tests.sh
         runDockerfileTests "$_REPLY_TOPIC"
 
-  - name: "us-central1-docker.pkg.dev/cloud-build-pipeline-396819/cloud-build-helper-docker/cloud-build-helper-docker:0.1"
+  - name: "us-central1-docker.pkg.dev/cloud-build-pipeline-396819/cloud-build-helper-docker/cloud-build-helper-docker:latest"
     id: "Create artifact registry repository"
     entrypoint: "bash"
     dir: "${_GIT_REPOSITORY_NAME}"
@@ -37,7 +37,7 @@ steps:
         source create-artifact-registry.sh
         createArtifactRegistry "$_REPLY_TOPIC"
 
-  - name: "us-central1-docker.pkg.dev/cloud-build-pipeline-396819/cloud-build-helper-docker/cloud-build-helper-docker:0.1"
+  - name: "us-central1-docker.pkg.dev/cloud-build-pipeline-396819/cloud-build-helper-docker/cloud-build-helper-docker:latest"
     id: "Build and push docker image"
     entrypoint: "bash"
     dir: "${_GIT_REPOSITORY_NAME}"
@@ -52,7 +52,7 @@ steps:
     env:
       - "PROJECT_ID=$PROJECT_ID"
 
-  - name: "us-central1-docker.pkg.dev/cloud-build-pipeline-396819/cloud-build-helper-docker/cloud-build-helper-docker:0.1"
+  - name: "us-central1-docker.pkg.dev/cloud-build-pipeline-396819/cloud-build-helper-docker/cloud-build-helper-docker:latest"
     id: "Reply back to pipeline"
     entrypoint: "bash"
     args:
